--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,15 @@ Jinja2==2.7.1
 MarkupSafe==0.18
 Werkzeug==0.9.4
 argparse==1.2.1
+colorama==0.2.7
 distribute==0.6.34
+gunicorn==18.0
 itsdangerous==0.23
 -e git+ssh://git@github.com/spotify/luigi.git@08453d890fc0491f32918a918c0dee08db9f9e33#egg=luigi-dev
+numpy==1.8.0
+pandas==0.12.0
+python-dateutil==2.2
+pytz==2013.8
+six==1.4.1
 slugify==0.0.1
 wsgiref==0.1.2
